Fix overflow issue in widgets

--- a/assets/dev/sass/component/ui.admin.scss
+++ b/assets/dev/sass/component/ui.admin.scss
@@ -62,10 +62,10 @@
   }
 
   .inside {
-    overflow-x: scroll;
+    overflow-x: visible;
 
     @media screen and (min-width: 768px) {
-      overflow-x: auto;
+      overflow-x: visible;
     }
 
     table {
